deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pluralizer-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pluralizer-ui
  template:
    metadata:
      labels:
        app: pluralizer-ui
    spec:
      containers:
        - name: pluralizer-ui
          image: ecomcukpoc.azurecr.io/pluralizer-ui:latest
