peristent-volume-claim.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  volumes:
    - name: test
      persistentVolumeClaim:
        claimName: test
  containers:
    - name: test
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: test
