service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pluralizer-ui
spec:
  selector:
    app: pluralizer-ui
# type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
