ingress.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
    name: ingressgateway
spec:
    selector:
        istio: ingressgateway # use istio default controller
    servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "*"
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: pluralizer-ui
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: pluralizer-ui
          servicePort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
    name: word-pluralizer
spec:
    gateways:
        - ingress-gateway
    hosts:
        - "*"
    http:
        - match:
              - uri:
                  prefix: "/api"
          route:
              - destination:
                    host: word-pluralizer.default
          rewrite:
              uri: "/"
          headers:
              request:
                  set:
                      # Inform Swagger (springfox) about the real path the API is published on
                      # see: https://github.com/springfox/springfox/pull/2465
                      X-Forwarded-Prefix: "/api"
